--- a/feedback/locale/be/LC_MESSAGES/django.po
+++ b/feedback/locale/be/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-10-17 00:13+0300\n"
+"POT-Creation-Date: 2011-10-17 00:20+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,3 +53,7 @@ msgstr "Мы хутка адкажам."
 #: templates/feedback/feedback_form.html:52
 msgid "Leave feedback"
 msgstr "Пакінуць водгук"
+
+#: templates/feedback/feedback_form.html:58
+msgid "Send"
+msgstr "Адправіць"
