--- a/feedback/locale/ru/LC_MESSAGES/django.po
+++ b/feedback/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-10-17 00:20+0300\n"
+"POT-Creation-Date: 2011-10-18 15:07+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -33,7 +33,7 @@ msgid "E-mail"
 msgstr ""
 
 #: forms.py:52
-msgid "Feedback"
+msgid "Opinion"
 msgstr "Отзыв"
 
 #: templates/feedback/feedback_form.html:40
@@ -53,8 +53,8 @@ msgid "We will answer soon."
 msgstr "Мы скоро ответим."
 
 #: templates/feedback/feedback_form.html:52
-msgid "Leave feedback"
-msgstr "Оставить отзыв"
+msgid "Feedback"
+msgstr "Обратная связь"
 
 #: templates/feedback/feedback_form.html:58
 msgid "Send"
